fix a tag overflow

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7770,7 +7770,8 @@ html {
 }
 
 a {
-    word-break: break-word;
+    word-break: break-all;
+    overflow-wrap: break-word;
 }
 
 /* clearfix */
